css/fusion.css
/* ... */
  /* end fusion control stuff*/

#error-popup, #status-popup {
	background-color: rgba(0,0,0);
    z-index: 99999;
    position:fixed;
    top:50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 53vw;
    height: 35vh;
    border: solid .3em white;
    border-radius: .2em;
    text-align: center;
    box-shadow: 0 0 5000px 5000px rgba(0,0,0,0.88);
}

#error-popup p, #status-popup p {
    width: 100%;
    font-size: 3vw;
    line-height: 3vw;
    position: absolute;
    color: white;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
}

/* status button css */

.condition-met {
    background-color: rgb(49, 219, 49);
    color: rgb(49, 219, 49);
    animation: blinker 1.6s linear infinite;
}

.condition-failed {
    background-color: #f80800;
    color: #f80800;
    animation: blinker 1.6s linear infinite;
}

@media screen and (max-width: 991px) {

    .section-title {
        font-size: 4vh;
        text-align: center;
    }

    .subject {
        width: 44% !important;
        margin: 2%;
        text-align: center;
    }

    #select-subjects-button {
        width: 93%;
    }

    #fusion-panel p {
        font-size: 2.1vh;
        line-height: 2.1vh;
        padding: 10px;
        border-width: .3vh;
    }

    .indicator button {
        font-size: 2.3vh;
        line-height: 2.3vh;
        width: 2.3vh;
        height: 2.3vh;
        padding: 10px;
        border-width: .3vh;
    }

    #select-subjects-button {
        font-size: 3vh !important;
        padding:5px;
        border-width: 1vh;
    }

    #select-subjects-button {
        border-width: 1vh;
    }

    #fuse-button {
        width: 12vh;
        height: 12vh;
        font-size: 3vh !important;
        border-width: 1vh;
        padding: 10px !important;
        text-align: center;
    }
    
    #fuse-button:hover {
        border-width: .85vh;
        font-size: 2.7vh !important;
    }

    h3 {
        font-size: 2.7vh;
    }

    #subjects, #fusion-controls {
        width: 100%;
    }

    #subjects {
        margin-bottom: 10px;
    }

    #confirm {
        width: 100%;
        height: initial;
        padding: 10px;
        font-size: 3vh;
      }

    #selected-yetis-big {
        width: 100%;
        position: sticky;
        bottom: 0;
        border-top: none;
        font-size: 2vh;
        padding: 10px;
    }

    #bottom-div {
        height: 15%;
    }

    .yeti-div {
        width: 40% !important;
        margin: 2.5%;
    }

    #close {
        padding: 2vh;
        font-size: 4vh;
    }

    #yeti-label {
        font-size: 1.9vh !important;
        line-height: 2.7vh !important;
    }

    .no-cyborgs-msg {
        font-size: 1.5vh !important;
    }

    .hide-on-desktop {
        display: block !important;
    }
    
    .hide-on-mobile {
        display: none !important;
    }

    #mobile-account {
        width:80%;
        margin-top: 10px;
    }

    #fusion-description, #fusion-description-2 {
        margin:auto;
        text-align: center;
        width: 95%;
        font-size: 2.5vh !important;
        line-height: 2.9vh !important;
    }

    h2 {
        font-size: 2.7vh !important;
        line-height: 2.7vh !important; 
    }

    #fusion-controls h2 {
        font-size: 2.3vh !important;
        line-height: 2.3vh !important; 
    }

    button {
        font-size: 1.7vh !important;
        line-height: 1.7vh !important;
    }

    #fusion-header-text {
        padding: 1vh;
        font-size: 2.3vh !important;
        line-height: 2.3vh !important;
        letter-spacing: 2px;
    }

    #fusion-section, #your-cyborg-section {
        width:95vw;
        min-height: 0;
        margin: auto;
    }

    .subject h2 {
        border-width: .5vh;
    }

    #fusion-section {
        border-width: 2vh;
    }

    #fusion-display {
        border-width: 1vh;
    }

    .subject img {
        border-width: 1vh;
    }

    #available-cyborg-images {
        width: 100%;
        text-align: center;
        display: -webkit-box;
        display: -webkit-flex;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-orient: horizontal;
        -webkit-box-direction: normal;
        -webkit-flex-direction: row;
        -ms-flex-direction: row;
        flex-direction: row;
        -webkit-box-pack: center;
        -webkit-justify-content: center;
        -ms-flex-pack: center;
        justify-content: center;
        -webkit-flex-wrap: wrap;
        -ms-flex-wrap: wrap;
        flex-wrap: wrap;
        -webkit-box-align: center;
        -webkit-align-items: center;
        -ms-flex-align: center;
        align-items: center;
    }

    .box3 {
        padding: 20px;
    }

    .your-cyborg {
        width: 41%;
    }

    #pending-transactions {
        min-width: 85%;
        position: fixed;
        bottom: 20px;
        left: 50%;
        transform: translate(-50%, 0);
      }
    
    .loading-div {
        font-size: 4vw;
        line-height: 4vw;
    }

    #error-popup, #status-popup {
        width: 75vw;
        height: 15vh;
    }

    #error-popup p, #status-popup p {
        font-size: 4vw;
        line-height: 4vw;
    }
}

